// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Tooltip has default desktop styles (defaultOpen) 1`] = `
<DocumentFragment>
  .c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.c0:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

<span
    class="c0"
    data-testid="tooltip"
    id="tooltip-trigger-uuid1"
    tabindex="0"
  >
    <svg
      aria-describedby="uuid1"
      class="lucide lucide-info"
      fill="none"
      focusable="false"
      height="16"
      stroke="#1B1C1E"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="12"
        cy="12"
        r="10"
      />
      <path
        d="M12 16v-4"
      />
      <path
        d="M12 8h.01"
      />
    </svg>
  </span>
  .c2 {
  height: 1.25rem;
  position: absolute;
  width: 1rem;
}

.c2::before {
  border-style: solid;
  content: '';
  display: block;
  height: 0;
  margin: auto;
  width: 0;
}

.c2::after {
  border-style: solid;
  content: '';
  display: block;
  height: 0;
  margin: auto;
  position: absolute;
  width: 0;
}

.c0 {
  background-color: #60666E;
  border: 1px solid #FFFFFF;
  border-radius: var(--border-radius-half);
  box-shadow: 0 10px 20px 0 rgb(0 0 0 / 19%);
  box-sizing: border-box;
  color: #FFFFFF;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  font-size: 0.75rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1.25rem;
  margin: 0;
  max-width: 327px;
  min-height: 24px;
  padding: 1px var(--spacing-1x);
  -webkit-transition: opacity 300ms;
  transition: opacity 300ms;
  z-index: 1000;
}

.c0[data-popper-placement*="bottom"] > .c1 {
  height: 1rem;
  left: 0;
  margin-top: -0.375rem;
  top: 0;
  width: 1rem;
}

.c0[data-popper-placement*="bottom"] > .c1::before {
  border-color: transparent transparent #FFFFFF transparent;
  border-width: 0 0.5rem 0.5rem;
  position: absolute;
  top: -2px;
}

.c0[data-popper-placement*="bottom"] > .c1::after {
  border-color: transparent transparent #60666E transparent;
  border-width: 0 0.5rem 0.5rem;
}

.c0[data-popper-placement*="top"] > .c1 {
  bottom: 0;
  height: 0;
  left: 0;
  margin-bottom: 0;
  width: 1rem;
}

.c0[data-popper-placement*="top"] > .c1::before {
  border-color: #FFFFFF transparent transparent transparent;
  border-width: 0.5rem 0.5rem 0;
  position: absolute;
  top: 0;
}

.c0[data-popper-placement*="top"] > .c1::after {
  border-color: #60666E transparent transparent transparent;
  border-width: 0.5rem 0.5rem 0;
  top: -0.1rem;
}

.c0[data-popper-placement*="right"] > .c1 {
  height: 1rem;
  left: 0;
  margin-left: -0.8rem;
  width: 1rem;
}

.c0[data-popper-placement*="right"] > .c1::before {
  border-color: transparent #FFFFFF transparent transparent;
  border-width: 0.5rem 0.5rem 0.5rem 0;
}

.c0[data-popper-placement*="right"] > .c1::after {
  border-color: transparent #60666E transparent transparent;
  border-width: 0.5rem 0.5rem 0.5rem 0;
  left: 0.375rem;
  top: 0;
}

.c0[data-popper-placement*="left"] > .c1 {
  height: 1rem;
  margin-right: -0.7rem;
  right: -1px;
  width: 1rem;
}

.c0[data-popper-placement*="left"] > .c1::before {
  border-color: transparent transparent transparent #FFFFFF;
  border-width: 0.5rem 0 0.5rem 0.5rem;
}

.c0[data-popper-placement*="left"] > .c1::after {
  border-color: transparent transparent transparent #60666E;
  border-width: 0.5rem 0 0.5rem 0.5rem;
  left: 0.17rem;
  top: 0;
}

.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

<div
    aria-hidden="false"
    class="c0"
    data-popper-escaped="true"
    data-popper-interactive="false"
    data-popper-placement="right"
    data-popper-reference-hidden="true"
    data-testid="tooltip-content-container"
    id="uuid1"
    role="tooltip"
    style="position: absolute; left: 0px; top: 0px; right: auto; bottom: auto; transform: translate(12px, 0px);"
  >
    <div
      class="c1 c2"
      data-popper-arrow="true"
      style="position: absolute; top: 0px; transform: translate(0px, 0px);"
    />
    <div
      class="c3"
    >
      Test Content
    </div>
  </div>
</DocumentFragment>
`;

exports[`Tooltip has default desktop styles 1`] = `
<DocumentFragment>
  .c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.c0:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

<span
    class="c0"
    data-testid="tooltip"
    id="tooltip-trigger-uuid1"
    tabindex="0"
  >
    <svg
      class="lucide lucide-info"
      fill="none"
      focusable="false"
      height="16"
      stroke="#1B1C1E"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="12"
        cy="12"
        r="10"
      />
      <path
        d="M12 16v-4"
      />
      <path
        d="M12 8h.01"
      />
    </svg>
  </span>
  .c2 {
  height: 1.25rem;
  position: absolute;
  width: 1rem;
}

.c2::before {
  border-style: solid;
  content: '';
  display: block;
  height: 0;
  margin: auto;
  width: 0;
}

.c2::after {
  border-style: solid;
  content: '';
  display: block;
  height: 0;
  margin: auto;
  position: absolute;
  width: 0;
}

.c0 {
  background-color: #60666E;
  border: 1px solid #FFFFFF;
  border-radius: var(--border-radius-half);
  box-shadow: 0 10px 20px 0 rgb(0 0 0 / 19%);
  box-sizing: border-box;
  color: #FFFFFF;
  display: none;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  font-size: 0.75rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1.25rem;
  margin: 0;
  max-width: 327px;
  min-height: 24px;
  padding: 1px var(--spacing-1x);
  -webkit-transition: opacity 300ms;
  transition: opacity 300ms;
  z-index: 1000;
}

.c0[data-popper-placement*="bottom"] > .c1 {
  height: 1rem;
  left: 0;
  margin-top: -0.375rem;
  top: 0;
  width: 1rem;
}

.c0[data-popper-placement*="bottom"] > .c1::before {
  border-color: transparent transparent #FFFFFF transparent;
  border-width: 0 0.5rem 0.5rem;
  position: absolute;
  top: -2px;
}

.c0[data-popper-placement*="bottom"] > .c1::after {
  border-color: transparent transparent #60666E transparent;
  border-width: 0 0.5rem 0.5rem;
}

.c0[data-popper-placement*="top"] > .c1 {
  bottom: 0;
  height: 0;
  left: 0;
  margin-bottom: 0;
  width: 1rem;
}

.c0[data-popper-placement*="top"] > .c1::before {
  border-color: #FFFFFF transparent transparent transparent;
  border-width: 0.5rem 0.5rem 0;
  position: absolute;
  top: 0;
}

.c0[data-popper-placement*="top"] > .c1::after {
  border-color: #60666E transparent transparent transparent;
  border-width: 0.5rem 0.5rem 0;
  top: -0.1rem;
}

.c0[data-popper-placement*="right"] > .c1 {
  height: 1rem;
  left: 0;
  margin-left: -0.8rem;
  width: 1rem;
}

.c0[data-popper-placement*="right"] > .c1::before {
  border-color: transparent #FFFFFF transparent transparent;
  border-width: 0.5rem 0.5rem 0.5rem 0;
}

.c0[data-popper-placement*="right"] > .c1::after {
  border-color: transparent #60666E transparent transparent;
  border-width: 0.5rem 0.5rem 0.5rem 0;
  left: 0.375rem;
  top: 0;
}

.c0[data-popper-placement*="left"] > .c1 {
  height: 1rem;
  margin-right: -0.7rem;
  right: -1px;
  width: 1rem;
}

.c0[data-popper-placement*="left"] > .c1::before {
  border-color: transparent transparent transparent #FFFFFF;
  border-width: 0.5rem 0 0.5rem 0.5rem;
}

.c0[data-popper-placement*="left"] > .c1::after {
  border-color: transparent transparent transparent #60666E;
  border-width: 0.5rem 0 0.5rem 0.5rem;
  left: 0.17rem;
  top: 0;
}

.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

<div
    aria-hidden="true"
    class="c0"
    data-popper-interactive="false"
    data-testid="tooltip-content-container"
    id="uuid1"
    role="tooltip"
    style="position: absolute; left: 0px; top: 0px;"
  >
    <div
      class="c1 c2"
      data-popper-arrow="true"
      style="position: absolute;"
    />
    <div
      class="c3"
    >
      Test Content
    </div>
  </div>
</DocumentFragment>
`;

exports[`Tooltip has mobile styles (defaultOpen) 1`] = `
<DocumentFragment>
  .c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.c0:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

<span
    class="c0"
    data-testid="tooltip"
    id="tooltip-trigger-uuid1"
    tabindex="0"
  >
    <svg
      aria-describedby="uuid1"
      class="lucide lucide-info"
      fill="none"
      focusable="false"
      height="24"
      stroke="#1B1C1E"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="12"
        cy="12"
        r="10"
      />
      <path
        d="M12 16v-4"
      />
      <path
        d="M12 8h.01"
      />
    </svg>
  </span>
  .c2 {
  height: 1.25rem;
  position: absolute;
  width: 1rem;
}

.c2::before {
  border-style: solid;
  content: '';
  display: block;
  height: 0;
  margin: auto;
  width: 0;
}

.c2::after {
  border-style: solid;
  content: '';
  display: block;
  height: 0;
  margin: auto;
  position: absolute;
  width: 0;
}

.c0 {
  background-color: #60666E;
  border: 1px solid #FFFFFF;
  border-radius: var(--border-radius-half);
  box-shadow: 0 10px 20px 0 rgb(0 0 0 / 19%);
  box-sizing: border-box;
  color: #FFFFFF;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  font-size: 1rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1.5rem;
  margin: 0;
  max-width: 327px;
  min-height: 72px;
  padding: 1px var(--spacing-3x);
  -webkit-transition: opacity 300ms;
  transition: opacity 300ms;
  z-index: 1000;
}

.c0[data-popper-placement*="bottom"] > .c1 {
  height: 1rem;
  left: 0;
  margin-top: -0.375rem;
  top: 0;
  width: 1rem;
}

.c0[data-popper-placement*="bottom"] > .c1::before {
  border-color: transparent transparent #FFFFFF transparent;
  border-width: 0 0.5rem 0.5rem;
  position: absolute;
  top: -2px;
}

.c0[data-popper-placement*="bottom"] > .c1::after {
  border-color: transparent transparent #60666E transparent;
  border-width: 0 0.5rem 0.5rem;
}

.c0[data-popper-placement*="top"] > .c1 {
  bottom: 0;
  height: 0;
  left: 0;
  margin-bottom: 0;
  width: 1rem;
}

.c0[data-popper-placement*="top"] > .c1::before {
  border-color: #FFFFFF transparent transparent transparent;
  border-width: 0.5rem 0.5rem 0;
  position: absolute;
  top: 0;
}

.c0[data-popper-placement*="top"] > .c1::after {
  border-color: #60666E transparent transparent transparent;
  border-width: 0.5rem 0.5rem 0;
  top: -0.1rem;
}

.c0[data-popper-placement*="right"] > .c1 {
  height: 1rem;
  left: 0;
  margin-left: -0.8rem;
  width: 1rem;
}

.c0[data-popper-placement*="right"] > .c1::before {
  border-color: transparent #FFFFFF transparent transparent;
  border-width: 0.5rem 0.5rem 0.5rem 0;
}

.c0[data-popper-placement*="right"] > .c1::after {
  border-color: transparent #60666E transparent transparent;
  border-width: 0.5rem 0.5rem 0.5rem 0;
  left: 0.375rem;
  top: 0;
}

.c0[data-popper-placement*="left"] > .c1 {
  height: 1rem;
  margin-right: -0.7rem;
  right: -1px;
  width: 1rem;
}

.c0[data-popper-placement*="left"] > .c1::before {
  border-color: transparent transparent transparent #FFFFFF;
  border-width: 0.5rem 0 0.5rem 0.5rem;
}

.c0[data-popper-placement*="left"] > .c1::after {
  border-color: transparent transparent transparent #60666E;
  border-width: 0.5rem 0 0.5rem 0.5rem;
  left: 0.17rem;
  top: 0;
}

.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

<div
    aria-hidden="false"
    class="c0"
    data-popper-escaped="true"
    data-popper-interactive="false"
    data-popper-placement="top"
    data-popper-reference-hidden="true"
    data-testid="tooltip-content-container"
    id="uuid1"
    role="tooltip"
    style="position: absolute; left: 0px; top: auto; right: auto; bottom: 0px; transform: translate(0px, -12px);"
  >
    <div
      class="c1 c2"
      data-popper-arrow="true"
      style="position: absolute; left: 0px; transform: translate(0px, 0px);"
    />
    <div
      class="c3"
    >
      Test Content
    </div>
  </div>
</DocumentFragment>
`;

exports[`Tooltip has mobile styles 1`] = `
<DocumentFragment>
  .c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.c0:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

<span
    class="c0"
    data-testid="tooltip"
    id="tooltip-trigger-uuid1"
    tabindex="0"
  >
    <svg
      class="lucide lucide-info"
      fill="none"
      focusable="false"
      height="24"
      stroke="#1B1C1E"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="12"
        cy="12"
        r="10"
      />
      <path
        d="M12 16v-4"
      />
      <path
        d="M12 8h.01"
      />
    </svg>
  </span>
  .c2 {
  height: 1.25rem;
  position: absolute;
  width: 1rem;
}

.c2::before {
  border-style: solid;
  content: '';
  display: block;
  height: 0;
  margin: auto;
  width: 0;
}

.c2::after {
  border-style: solid;
  content: '';
  display: block;
  height: 0;
  margin: auto;
  position: absolute;
  width: 0;
}

.c0 {
  background-color: #60666E;
  border: 1px solid #FFFFFF;
  border-radius: var(--border-radius-half);
  box-shadow: 0 10px 20px 0 rgb(0 0 0 / 19%);
  box-sizing: border-box;
  color: #FFFFFF;
  display: none;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  font-size: 1rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1.5rem;
  margin: 0;
  max-width: 327px;
  min-height: 72px;
  padding: 1px var(--spacing-3x);
  -webkit-transition: opacity 300ms;
  transition: opacity 300ms;
  z-index: 1000;
}

.c0[data-popper-placement*="bottom"] > .c1 {
  height: 1rem;
  left: 0;
  margin-top: -0.375rem;
  top: 0;
  width: 1rem;
}

.c0[data-popper-placement*="bottom"] > .c1::before {
  border-color: transparent transparent #FFFFFF transparent;
  border-width: 0 0.5rem 0.5rem;
  position: absolute;
  top: -2px;
}

.c0[data-popper-placement*="bottom"] > .c1::after {
  border-color: transparent transparent #60666E transparent;
  border-width: 0 0.5rem 0.5rem;
}

.c0[data-popper-placement*="top"] > .c1 {
  bottom: 0;
  height: 0;
  left: 0;
  margin-bottom: 0;
  width: 1rem;
}

.c0[data-popper-placement*="top"] > .c1::before {
  border-color: #FFFFFF transparent transparent transparent;
  border-width: 0.5rem 0.5rem 0;
  position: absolute;
  top: 0;
}

.c0[data-popper-placement*="top"] > .c1::after {
  border-color: #60666E transparent transparent transparent;
  border-width: 0.5rem 0.5rem 0;
  top: -0.1rem;
}

.c0[data-popper-placement*="right"] > .c1 {
  height: 1rem;
  left: 0;
  margin-left: -0.8rem;
  width: 1rem;
}

.c0[data-popper-placement*="right"] > .c1::before {
  border-color: transparent #FFFFFF transparent transparent;
  border-width: 0.5rem 0.5rem 0.5rem 0;
}

.c0[data-popper-placement*="right"] > .c1::after {
  border-color: transparent #60666E transparent transparent;
  border-width: 0.5rem 0.5rem 0.5rem 0;
  left: 0.375rem;
  top: 0;
}

.c0[data-popper-placement*="left"] > .c1 {
  height: 1rem;
  margin-right: -0.7rem;
  right: -1px;
  width: 1rem;
}

.c0[data-popper-placement*="left"] > .c1::before {
  border-color: transparent transparent transparent #FFFFFF;
  border-width: 0.5rem 0 0.5rem 0.5rem;
}

.c0[data-popper-placement*="left"] > .c1::after {
  border-color: transparent transparent transparent #60666E;
  border-width: 0.5rem 0 0.5rem 0.5rem;
  left: 0.17rem;
  top: 0;
}

.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

<div
    aria-hidden="true"
    class="c0"
    data-popper-interactive="false"
    data-testid="tooltip-content-container"
    id="uuid1"
    role="tooltip"
    style="position: absolute; left: 0px; top: 0px;"
  >
    <div
      class="c1 c2"
      data-popper-arrow="true"
      style="position: absolute;"
    />
    <div
      class="c3"
    >
      Test Content
    </div>
  </div>
</DocumentFragment>
`;
